--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Страница не существует</title>
+    <title>РЎС‚СЂР°РЅРёС†Р° РЅРµ СЃСѓС‰РµСЃС‚РІСѓРµС‚</title>
 </head>
 <body>
     <p align="center"><img src="img404.png" height="360" alt="404 Error!"></p>
-    <p align="center">Попробуйте перейти на <a href="index.php">главную страницу</a></p>
+    <p align="center">РџРѕРїСЂРѕР±СѓР№С‚Рµ РїРµСЂРµР№С‚Рё РЅР° <a href="index.php">РіР»Р°РІРЅСѓСЋ СЃС‚СЂР°РЅРёС†Сѓ</a></p>
 </body>
 </html>
